[package]
name = "boo"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bin]]
name = "boo"
bench = false

[[example]]
name = "random_program"
bench = false

[[bench]]
name = "evaluate_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
im = { version = "15.1.0", features = ["proptest"] }
lazy_static = "1.4.0"
logos = "0.13.0"
miette = { version = "5.8.0", features = ["fancy"] }
num-bigint = "0.4.0"
peg = "0.8.1"
proptest = "1.1.0"
proptest-derive = "0.3.0"
rand = "0.8.5"
reedline = "0.18.0"
regex = "1.8.1"
thiserror = "1.0.40"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["csv", "html_reports"] }
