[workspace]

members = [
  "crates/benchmarks",
  "crates/core",
  "crates/e2e",
  "crates/evaluator",
  "crates/generator",
  "crates/interpreter",
  "crates/language",
  "crates/lib",
  "crates/naive-evaluator",
  "crates/parser",
  "crates/random-program",
  "crates/test-helpers",
]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
