[workspace]

members = [
  "crates/benchmarks",
  "crates/core",
  "crates/e2e",
  "crates/generator",
  "crates/interpreter",
  "crates/language",
  "crates/lib",
  "crates/naive-evaluator",
  "crates/optimized-evaluator",
  "crates/parser",
  "crates/random-program",
  "crates/test-helpers",
]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
