[package]
name = "boo-benchmarks"
version = "0.1.0"
edition = "2021"

autobenches = false

[[bin]]
name = "evaluate-benchmark-list"
path = "benches/evaluate_benchmark.rs"
bench = false

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
boo-core = { path = "../core" }
boo-generator = { path = "../generator" }
boo-naive-evaluator = { path = "../naive-evaluator" }
boo-optimized-evaluator = { path = "../optimized-evaluator" }

criterion = { version = "0.4.0", features = ["csv", "html_reports"] }
num-bigint = "0.4.3"
proptest = "1.2.0"
