[package]
name = "boo-benchmarks"
version.workspace = true
edition.workspace = true

autobenches = false

[[bin]]
name = "evaluate-benchmark-list"
path = "benches/evaluate_benchmark.rs"
bench = false

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
boo-core = { path = "../core" }
boo-generator = { path = "../generator" }
boo-evaluation-optimized = { path = "../evaluation-optimized" }
boo-evaluation-reduction = { path = "../evaluation-reduction" }

criterion = { version = "0.5.1", features = ["csv", "html_reports"] }
num-bigint = "0.4.4"
proptest = "1.4.0"
