[package]
name = "boo-core"
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
lazy_static = "1.4.0"
miette = "5.10.0"
num-bigint = "0.4.3"
proptest = "1.2.0"
regex = "1.9.3"
thiserror = "1.0.44"

[dev-dependencies]
boo-test-helpers = { path = "../test-helpers" }
