[package]
name = "boo-core"
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
lazy_static = "1.4.0"
miette = "5.10.0"
num-bigint = "0.4.4"
proptest = "1.4.0"
regex = "1.10.3"
thiserror = "1.0.56"

[dev-dependencies]
boo-test-helpers = { path = "../test-helpers" }
