[package]
name = "boo-e2e"
version.workspace = true
edition.workspace = true

[dev-dependencies]
boo = { path = "../lib" }
boo-naive-evaluator = { path = "../naive-evaluator" }
boo-optimized-evaluator = { path = "../optimized-evaluator" }
boo-types-hindley-milner = { path = "../types-hindley-milner" }

insta = "1.34.0"
