[package]
name = "boo-evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]
boo-core = { path = "../core" }
boo-parser = { path = "../parser" }

im = { version = "15.1.0", features = ["proptest"] }
proptest = "1.1.0"
proptest-derive = "0.3.0"

[dev-dependencies]
boo-test-helpers = { path = "../test-helpers" }
