[package]
name = "boo-evaluator"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
boo-core = { path = "../core" }

im = { version = "15.1.0", features = ["proptest"] }
proptest = "1.2.0"
proptest-derive = "0.3.0"

[dev-dependencies]
boo-generator = { path = "../generator" }
boo-language = { path = "../language" }
boo-naive-evaluator = { path = "../naive-evaluator" }
boo-parser = { path = "../parser" }
boo-test-helpers = { path = "../test-helpers" }
