[package]
name = "boo-interpreter"
version.workspace = true
edition.workspace = true

default-run = "interpreter"

[[bin]]
name = "interpreter"
path = "src/main.rs"
bench = false

[dependencies]
boo = { path = "../lib" }
boo-naive-evaluator = { path = "../naive-evaluator" }

clap = { version = "4.4.6", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
reedline = "0.24.0"
