[package]
name = "boo-optimized-evaluator"
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
boo-core = { path = "../core" }

im = { version = "15.1.0", features = ["proptest"] }
proptest = "1.3.1"

[dev-dependencies]
boo-generator = { path = "../generator" }
boo-language = { path = "../language" }
boo-naive-evaluator = { path = "../naive-evaluator" }
boo-parser = { path = "../parser" }
boo-test-helpers = { path = "../test-helpers" }
