[package]
name = "boo-optimized-evaluator"
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
boo-core = { path = "../core" }
boo-evaluation-lazy = { path = "../evaluation-lazy" }

proptest = "1.4.0"

[dev-dependencies]
boo-generator = { path = "../generator" }
boo-language = { path = "../language" }
boo-naive-evaluator = { path = "../naive-evaluator" }
boo-parser = { path = "../parser" }
boo-test-helpers = { path = "../test-helpers" }
