[package]
name = "boo-parser"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
boo-core = { path = "../core" }
boo-language = { path = "../language" }

logos = "0.13.0"
peg = "0.8.1"

[dev-dependencies]
boo-generator = { path = "../generator" }
boo-test-helpers = { path = "../test-helpers" }

insta = "1.31.0"
proptest = "1.2.0"
