[package]
name = "boo-parser"
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
boo-core = { path = "../core" }
boo-language = { path = "../language" }

logos = "0.13.0"
peg = "0.8.1"

[dev-dependencies]
boo-generator = { path = "../generator" }
boo-test-helpers = { path = "../test-helpers" }

insta = "1.31.0"
proptest = "1.2.0"
