[package]
name = "boo-parser"
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
boo-core = { path = "../core" }
boo-language = { path = "../language" }

logos = "0.13.0"
peg = "0.8.2"

[dev-dependencies]
boo-generator = { path = "../generator" }
boo-test-helpers = { path = "../test-helpers" }

insta = "1.34.0"
proptest = "1.3.1"
