[package]
name = "boo-random-program"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random-program"
path = "src/main.rs"
bench = false

[dependencies]
boo = { path = "../lib" }
boo-core = { path = "../core" }
boo-generator = { path = "../generator" }
boo-parser = { path = "../parser" }

anyhow = "1.0.71"
proptest = "1.1.0"
