[package]
name = "boo-random-program"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random-program"
path = "src/main.rs"
bench = false

[dependencies]
boo = { path = "../lib" }
boo-generator = { path = "../generator" }
boo-language = { path = "../language" }
boo-parser = { path = "../parser" }

anyhow = "1.0.71"
proptest = "1.2.0"
