[package]
name = "boo-types-hindley-milner"
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
boo-core = { path = "../core" }

im = "15.1.0"

[dev-dependencies]
boo-generator = { path = "../generator" }
boo-parser = { path = "../parser" }
boo-test-helpers = { path = "../test-helpers" }

anyhow = "1.0.79"
proptest = "1.4.0"
